--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,6 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+.section-heading {
+  @apply text-center text-3xl font-bold text-white md:text-4xl lg:text-5xl;
+}
